--- a/spring-di-quickstart/src/main/resources/application.properties
+++ b/spring-di-quickstart/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 # Configuration file
 # key = value
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=tsukasa
+quarkus.datasource.password=password
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/examdb
+quarkus.datasource.jdbc.max-size=8
+quarkus.datasource.jdbc.min-size=2
+#quarkus.hibernate-orm.database.generation=drop-and-create
